--- a/modbus-agent/package.json
+++ b/modbus-agent/package.json
@@ -15,7 +15,6 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "modbus-serial": "^8.0.13",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -46,13 +45,20 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.19",
+    "async-retry": "^1.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.1",
     "embla-carousel-react": "^8.0.0",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.294.0",
+    "modbus-serial": "^8.0.13",
+    "morgan": "^1.10.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
@@ -65,18 +71,16 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
-    "zod": "^3.22.4",
-    "async-retry": "^1.3.3",
     "winston": "^3.11.0",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "helmet": "^7.1.0",
-    "cors": "^2.8.5",
-    "morgan": "^1.10.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^8.56.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
@@ -86,17 +90,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^13.24.0",
+    "jest": "^29.7.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.0.1",
-    "vite": "^5.1.3",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.12",
-    "ts-jest": "^29.1.2"
+    "vite": "^5.4.18"
   }
 }
