--- a/modbus-agent/package.json
+++ b/modbus-agent/package.json
@@ -102,5 +102,11 @@
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.29.1",
     "vite": "^5.4.18"
+  },
+  "resolutions": {
+    "semver": "^7.5.4",
+    "word-wrap": "^1.2.5",
+    "optionator": "^0.9.3",
+    "@babel/traverse": "^7.23.2"
   }
 }
